//
//  Names.swift
//  SW Characters
//
//  Created by Mahesh sai on 09/11/20.
//

import Foundation

struct Identifiers {
    /// Identifiers for all UIElements
    static let tableIdentifier = "Character List"
    static let addCharacterButtonIdentifier = "Add Character"
    static let reloadCharacterButtonIdentifier = "Reload Character"
    static let addCharacterNameTextFieldIdentifier = "Name Field"
    static let addCharacterEyeColourTextFieldIdentifier = "Eye Colour Field"
    static let addCharacterHeightTextFieldIdentifier = "Height Field"
    static let addCharacterResetButtonIdentifier = "Reset Character"
    static let addCharacterSaveButtonIdentifier = "Save Character"
    static let characterDetailRemoveButtonIdentifier = "Remove Character"
    static let characterDetailNameLabel = "Character Name"
    static let characterDetailHeightLabel = "Character Height"
    static let characterDetailEyeLabel = "Character Eye"
    static let url = "https://swapi.dev/api/people"
    
}
